CHANGELOG

>>VERSION 17.7.4
* Changed some waypoint regions due to players' complaints. Essos wp can be unlocked in Kings Landing; Sothoryos - Ghiscar; Ulthos - Asshai; Ibben - Essos; Summer Islands - Sothoryos.
* Improved chest contents in all the world
* Returned "kill mob" type of quests
* Returned "kill player" type of quests
* Improved andesite texture
* Fixed bug with slaves speechbank

>>VERSION 17.7.3
+ Added full Polish edition (lore, speech, names, quests: prod. Axel)
+ Added strict title rules, as in the LOTR
+ Added min Y limit for waypoint creation, as in the LOTR
+ Added fellowship creation settings, as in the LOTR
* Updated font pack, now with support of extended Latin & Cyrillic alphabets.
* Recoded cold weapon, some bugs and strange stats can be fixed.
* Returned alignment zones feature

* Fixed bug with saving level data
* Fixed bug with road near Bronze Gate & Sarsfield
* Fixed bug with towers quantity near "Three Towers" waypoint

>>VERSION 17.7.2
+ Greatly improved Polish translation (prod. Axel Snow)
* Improved 2nd Tyrosh male skin
* Rebalanced Joffrey's Crossbow
* Fixed bug with Essos & Dorne fort walls upon the road
* Fixed bug with Wyl & Hayford road
* Fixed bug with Beric Dayne spawning
* Fixed bug with chance of double Beric Dondarrion's drop
* Fixed bug with hillmen villages
* Fixed bug with crash caused by rhino riders
* Fixed bug with Mossovy Forts & Villages
* Fixed bug with desert scorpions instead of jungle scorpions spawning in tropical forests
* Fixed potential bugs, caused by "legendary" mercenaries
* Returned black roofs to the Dorne

>>VERSION 17.7.1
* Improved ukrainian translation (prod. DDPAT Knife Series)
* Fixed bug with anvil texture
* Fixed bug with agressive mobs AI

>>VERSION 17.7
* Greatly improved the Ice Wall and the Yi Ti Wall
* Greatly improved all the banners in the game (prod. Hummel009)
+ Added ruined wall castles
+ Added fixed castles in mountain biomes
+ Added Asshai Shield
+ Added feminized ranks