@@ -3,18 +3,22 @@ package got.common.block.other;
 import java.util.*;
 
 import cpw.mods.fml.relauncher.*;
-import got.common.database.GOTCreativeTabs;
+import got.common.database.*;
 import net.minecraft.block.Block;
 import net.minecraft.block.material.Material;
 import net.minecraft.client.renderer.texture.IIconRegister;
 import net.minecraft.creativetab.CreativeTabs;
 import net.minecraft.item.*;
 import net.minecraft.util.IIcon;
-import net.minecraft.world.World;
+import net.minecraft.world.*;
 
 public class GOTBlockRock extends Block {
 	@SideOnly(value = Side.CLIENT)
 	public IIcon[] rockIcons;
+	@SideOnly(value = Side.CLIENT)
+	public IIcon iconMordorSide;
+	@SideOnly(value = Side.CLIENT)
+	public IIcon iconMordorMoss;
 	public String[] rockNames = { "basalt", "andesite", "rhyolite", "diorite", "granite", "chalk", "carnotite" };
 
 	public GOTBlockRock() {
@@ -30,17 +34,30 @@ public class GOTBlockRock extends Block {
 		return i;
 	}
 
-	@SideOnly(value = Side.CLIENT)
 	@Override
-	public IIcon getIcon(int i, int j) {
-		if (j >= rockNames.length) {
-			j = 0;
+	@SideOnly(value = Side.CLIENT)
+	public IIcon getIcon(IBlockAccess world, int i, int j, int k, int side) {
+		int meta = world.getBlockMetadata(i, j, k);
+		if (meta == 0 && side != 1 && side != 0 && (world.getBlock(i, j + 1, k)) == GOTRegistry.asshaiMoss) {
+			return iconMordorMoss;
 		}
-		return rockIcons[j];
+		return super.getIcon(world, i, j, k, side);
 	}
 
-	@SideOnly(value = Side.CLIENT)
 	@Override
+	@SideOnly(value = Side.CLIENT)
+	public IIcon getIcon(int side, int meta) {
+		if (meta >= rockNames.length) {
+			meta = 0;
+		}
+		if (meta == 0 && side != 1 && side != 0) {
+			return iconMordorSide;
+		}
+		return rockIcons[meta];
+	}
+
+	@Override
+	@SideOnly(value = Side.CLIENT)
 	public void getSubBlocks(Item item, CreativeTabs tab, List list) {
 		for (int i = 0; i < rockNames.length; ++i) {
 			list.add(new ItemStack(item, 1, i));
@@ -55,20 +72,25 @@ public class GOTBlockRock extends Block {
 		return false;
 	}
 
-	@SideOnly(value = Side.CLIENT)
 	@Override
+	@SideOnly(value = Side.CLIENT)
 	public void randomDisplayTick(World world, int i, int j, int k, Random random) {
 		if (world.getBlock(i, j, k) == this && world.getBlockMetadata(i, j, k) == 0 && random.nextInt(10) == 0) {
 			world.spawnParticle("smoke", i + random.nextFloat(), j + 1.1f, k + random.nextFloat(), 0.0, 0.0, 0.0);
 		}
 	}
 
-	@SideOnly(value = Side.CLIENT)
 	@Override
+	@SideOnly(value = Side.CLIENT)
 	public void registerBlockIcons(IIconRegister iconregister) {
 		rockIcons = new IIcon[rockNames.length];
 		for (int i = 0; i < rockNames.length; ++i) {
-			rockIcons[i] = iconregister.registerIcon(getTextureName() + "_" + rockNames[i]);
+			String subName = getTextureName() + "_" + rockNames[i];
+			rockIcons[i] = iconregister.registerIcon(subName);
+			if (i == 0) {
+				iconMordorSide = iconregister.registerIcon(subName + "_side");
+				iconMordorMoss = iconregister.registerIcon(subName + "_moss");
+			}
 		}
 	}
 }
